# Multi-SOM

./: CMakeLists.txt  README.md  main.cpp  multisom.cpp  rofl.cpp  som.cpp
